descargar imagen de internet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/texto_cargando"
             android:text="Iniciado" />
+        <ImageView
+            android:src="@mipmap/ic_launcher"
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/texto_cargando"/>
     </RelativeLayout>
